--- a/vc7/JCCL/RTRC_Plugin_CXX/RTRC_Plugin_CXX.vcproj
+++ b/vc7/JCCL/RTRC_Plugin_CXX/RTRC_Plugin_CXX.vcproj
@@ -20,7 +20,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="0"
 				AdditionalIncludeDirectories=".;&quot;$(NSPR_ROOT)\include&quot;;&quot;$(OMNIORB_ROOT)\include&quot;;&quot;$(BOOST_INCLUDES)&quot;;&quot;$(CPPDOM_ROOT)\include&quot;;..\..\..\modules\jackal\plugins;..\..\..\modules\vapor;..\..\..\modules\jackal\common;..\..\..\modules\jackal\config;..\..\..\modules\jackal\rtrc;..\..\..\modules\tweek;..\..\VPR;..;..\..\Tweek_CXX;..\..\Tweek_CXX\tweek\CORBA"
-				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_USRDLL;_JCCL_PLUGIN_BUILD_;__NT__=1;__OSVERSION__=5;__WIN32__=1;__x86__=1"
+				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE;_USRDLL;_JCCL_PLUGIN_BUILD_;__NT__=1;__OSVERSION__=5;__WIN32__=1;__x86__=1"
 				MinimalRebuild="FALSE"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
@@ -41,7 +41,7 @@
 				AdditionalLibraryDirectories="..\..\VPR\DebugDLL;..\DebugDLL;..\..\Tweek_CXX\DebugDLL;&quot;$(CPPDOM_ROOT)\lib&quot;;&quot;$(NSPR_ROOT)\lib&quot;;&quot;$(OMNIORB_LIB)&quot;;&quot;$(BOOST_ROOT)\lib&quot;"
 				GenerateDebugInformation="TRUE"
 				ProgramDatabaseFile="$(OutDir)/corba_rtrc_d.pdb"
-				SubSystem="2"
+				SubSystem="1"
 				ImportLibrary="$(OutDir)/corba_rtrc.lib"
 				TargetMachine="1"/>
 			<Tool
@@ -73,7 +73,7 @@
 				InlineFunctionExpansion="1"
 				OmitFramePointers="TRUE"
 				AdditionalIncludeDirectories=".;&quot;$(NSPR_ROOT)\include&quot;;&quot;$(OMNIORB_ROOT)\include&quot;;&quot;$(BOOST_INCLUDES)&quot;;&quot;$(CPPDOM_ROOT)\include&quot;;..\..\..\modules\jackal\plugins;..\..\..\modules\vapor;..\..\..\modules\jackal\common;..\..\..\modules\jackal\config;..\..\..\modules\jackal\rtrc;..\..\..\modules\tweek;..\..\VPR;..;..\..\Tweek_CXX;..\..\Tweek_CXX\tweek\CORBA"
-				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL;JCCL_PLUGIN_BUILD_;_OPT;__NT__=1;__OSVERSION__=5;__WIN32__=1;__x86__=1"
+				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE;_USRDLL;JCCL_PLUGIN_BUILD_;_OPT;__NT__=1;__OSVERSION__=5;__WIN32__=1;__x86__=1"
 				StringPooling="TRUE"
 				MinimalRebuild="FALSE"
 				RuntimeLibrary="2"
@@ -94,7 +94,7 @@
 				LinkIncremental="1"
 				AdditionalLibraryDirectories="..\..\VPR\ReleaseDLL;..\ReleaseDLL;..\..\Tweek_CXX\ReleaseDLL;&quot;$(CPPDOM_ROOT)\lib&quot;;&quot;$(NSPR_ROOT)\lib&quot;;&quot;$(OMNIORB_LIB)&quot;;&quot;$(BOOST_ROOT)\lib&quot;"
 				GenerateDebugInformation="FALSE"
-				SubSystem="2"
+				SubSystem="1"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
 				ImportLibrary="$(OutDir)/corba_rtrc.lib"
