--- a/vc7/Tweek_CXX/Tweek_CXX.vcproj
+++ b/vc7/Tweek_CXX/Tweek_CXX.vcproj
@@ -20,7 +20,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="0"
 				AdditionalIncludeDirectories=".;tweek\CORBA;&quot;$(NSPR_ROOT)\include&quot;;&quot;$(OMNIORB_ROOT)\include&quot;;&quot;$(BOOST_INCLUDES)&quot;;&quot;$(CPPDOM_ROOT)\include&quot;;..\..\modules\vapor;..\..\modules\tweek;..\VPR"
-				PreprocessorDefinitions="WIN32;_WINDOWS;_DEBUG;_USRDLL;_TWEEK_BUILD_;__NT__=1;__OSVERSION__=5;__WIN32__=1;__x86__=1"
+				PreprocessorDefinitions="WIN32;_CONSOLE;_DEBUG;_USRDLL;_TWEEK_BUILD_;__NT__=1;__OSVERSION__=5;__WIN32__=1;__x86__=1"
 				MinimalRebuild="FALSE"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
@@ -42,7 +42,7 @@
 				ModuleDefinitionFile="..\..\modules\tweek\corba_exports.def"
 				GenerateDebugInformation="TRUE"
 				ProgramDatabaseFile="$(OutDir)/tweek_d.pdb"
-				SubSystem="0"
+				SubSystem="1"
 				ImportLibrary="$(OutDir)/tweek_d.lib"
 				TargetMachine="1"/>
 			<Tool
@@ -79,7 +79,7 @@ $(OMNIORB_BIN)\omniidl -bcxx -Wbh=.h,s=.cpp -Ctweek\CORBA -I../../modules/tweek 
 				InlineFunctionExpansion="1"
 				OmitFramePointers="TRUE"
 				AdditionalIncludeDirectories=".;tweek\CORBA;&quot;$(NSPR_ROOT)\include&quot;;&quot;$(OMNIORB_ROOT)\include&quot;;&quot;$(BOOST_INCLUDES)&quot;;&quot;$(CPPDOM_ROOT)\include&quot;;..\..\modules\vapor;..\..\modules\tweek;..\VPR"
-				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL;_TWEEK_BUILD_;_OPT;__NT__=1;__OSVERSION__=5;__WIN32__=1;__x86__=1"
+				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE;_USRDLL;_TWEEK_BUILD_;_OPT;__NT__=1;__OSVERSION__=5;__WIN32__=1;__x86__=1"
 				StringPooling="TRUE"
 				RuntimeLibrary="2"
 				BufferSecurityCheck="FALSE"
@@ -101,7 +101,7 @@ $(OMNIORB_BIN)\omniidl -bcxx -Wbh=.h,s=.cpp -Ctweek\CORBA -I../../modules/tweek 
 				AdditionalLibraryDirectories="..\VPR\ReleaseDLL;&quot;$(NSPR_ROOT)\lib&quot;;&quot;$(OMNIORB_LIB)&quot;"
 				ModuleDefinitionFile="..\..\modules\tweek\corba_exports.def"
 				GenerateDebugInformation="FALSE"
-				SubSystem="2"
+				SubSystem="1"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
 				ImportLibrary="$(OutDir)/tweek.lib"
