--- a/vc7/VRJuggler/OpenGL_Draw_Manager/OpenGL_Draw_Manager.vcproj
+++ b/vc7/VRJuggler/OpenGL_Draw_Manager/OpenGL_Draw_Manager.vcproj
@@ -21,7 +21,7 @@
 				AdditionalOptions="/Zm800"
 				Optimization="0"
 				AdditionalIncludeDirectories=".;&quot;$(NSPR_ROOT)\include&quot;;&quot;$(BOOST_INCLUDES)&quot;;&quot;$(CPPDOM_ROOT)\include&quot;;&quot;$(GMTL_ROOT)\include&quot;;..\..\..\modules\vapor;..\..\..\modules\jackal\common;..\..\..\modules\jackal\config;..\..\..\modules\jackal\rtrc;..\..\..\modules\gadgeteer;..\..\..\modules\vrjuggler;..;..\..\VPR;..\..\JCCL;..\..\Gadgeteer"
-				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_USRDLL;_VRJ_BUILD_"
+				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE;_USRDLL;_VRJ_BUILD_"
 				MinimalRebuild="FALSE"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
@@ -43,7 +43,7 @@
 				AdditionalLibraryDirectories="..\DebugDLL;..\..\VPR\DebugDLL;..\..\JCCL\DebugDLL;..\..\Gadgeteer\DebugDLL;&quot;$(NSPR_ROOT)\lib&quot;;&quot;$(BOOST_ROOT)\lib&quot;"
 				GenerateDebugInformation="TRUE"
 				ProgramDatabaseFile="$(OutDir)/vrj_d.pdb"
-				SubSystem="2"
+				SubSystem="1"
 				ImportLibrary="$(OutDir)/vrj_ogl_d.lib"
 				TargetMachine="1"/>
 			<Tool
@@ -73,7 +73,7 @@
 				InlineFunctionExpansion="1"
 				OmitFramePointers="TRUE"
 				AdditionalIncludeDirectories=".;&quot;$(NSPR_ROOT)\include&quot;;&quot;$(BOOST_INCLUDES)&quot;;&quot;$(CPPDOM_ROOT)\include&quot;;&quot;$(GMTL_ROOT)\include&quot;;..\..\..\modules\vapor;..\..\..\modules\jackal\common;..\..\..\modules\jackal\config;..\..\..\modules\jackal\rtrc;..\..\..\modules\gadgeteer;..\..\..\modules\vrjuggler;..;..\..\VPR;..\..\JCCL;..\..\Gadgeteer"
-				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL;_VRJ_BUILD_;_OPT"
+				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE;_USRDLL;_VRJ_BUILD_;_OPT"
 				StringPooling="TRUE"
 				MinimalRebuild="FALSE"
 				RuntimeLibrary="2"
@@ -95,7 +95,7 @@
 				LinkIncremental="1"
 				AdditionalLibraryDirectories="..\ReleaseDLL;..\..\VPR\ReleaseDLL;..\..\JCCL\ReleaseDLL;..\..\Gadgeteer\ReleaseDLL;&quot;$(NSPR_ROOT)\lib&quot;;&quot;$(BOOST_ROOT)\lib&quot;"
 				GenerateDebugInformation="FALSE"
-				SubSystem="2"
+				SubSystem="1"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
 				ImportLibrary="$(OutDir)/vrj_ogl.lib"
