--- a/vc7/VRJuggler/VRJuggler.vcproj
+++ b/vc7/VRJuggler/VRJuggler.vcproj
@@ -21,7 +21,7 @@
 				AdditionalOptions="/Zm800"
 				Optimization="0"
 				AdditionalIncludeDirectories=".;..\..\modules\vrjuggler;&quot;$(NSPR_ROOT)\include&quot;;&quot;$(BOOST_INCLUDES)&quot;;&quot;$(CPPDOM_ROOT)\include&quot;;&quot;$(GMTL_ROOT)\include&quot;;..\..\modules\vapor;..\..\modules\jackal\common;..\..\modules\jackal\config;..\..\modules\jackal\rtrc;..\..\modules\gadgeteer;..\..\modules\sonix;..\VPR;..\JCCL;..\Gadgeteer;..\Sonix"
-				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_USRDLL;_VRJ_BUILD_;VJ_SHARE_DIR=&quot;\&quot;share\\vrjuggler\&quot;&quot;"
+				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE;_USRDLL;_VRJ_BUILD_;VJ_SHARE_DIR=&quot;\&quot;share\\vrjuggler\&quot;&quot;"
 				MinimalRebuild="FALSE"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
@@ -43,7 +43,7 @@
 				AdditionalLibraryDirectories="&quot;$(NSPR_ROOT)\lib&quot;;&quot;$(CPPDOM_ROOT)\lib&quot;;&quot;$(BOOST_ROOT)\lib&quot;;..\VPR\DebugDLL;..\JCCL\DebugDLL;..\Gadgeteer\DebugDLL;..\Sonix\DebugDLL"
 				GenerateDebugInformation="TRUE"
 				ProgramDatabaseFile="$(OutDir)/vrj_d.pdb"
-				SubSystem="2"
+				SubSystem="1"
 				ImportLibrary="$(OutDir)/vrj_d.lib"
 				TargetMachine="1"/>
 			<Tool
@@ -74,7 +74,7 @@
 				InlineFunctionExpansion="1"
 				OmitFramePointers="TRUE"
 				AdditionalIncludeDirectories=".;..\..\modules\vrjuggler;&quot;$(NSPR_ROOT)\include&quot;;&quot;$(BOOST_INCLUDES)&quot;;&quot;$(CPPDOM_ROOT)\include&quot;;&quot;$(GMTL_ROOT)\include&quot;;..\..\modules\vapor;..\..\modules\jackal\common;..\..\modules\jackal\config;..\..\modules\jackal\rtrc;..\..\modules\gadgeteer;..\..\modules\sonix;..\VPR;..\JCCL;..\Gadgeteer;..\Sonix"
-				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL;_VRJ_BUILD_;_OPT;VJ_SHARE_DIR=&quot;\&quot;share\\vrjuggler\&quot;&quot;"
+				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE;_USRDLL;_VRJ_BUILD_;_OPT;VJ_SHARE_DIR=&quot;\&quot;share\\vrjuggler\&quot;&quot;"
 				StringPooling="TRUE"
 				RuntimeLibrary="2"
 				BufferSecurityCheck="FALSE"
@@ -95,7 +95,7 @@
 				LinkIncremental="1"
 				AdditionalLibraryDirectories="&quot;$(NSPR_ROOT)\lib&quot;;&quot;$(CPPDOM_ROOT)\lib&quot;;&quot;$(BOOST_ROOT)\lib&quot;;..\VPR\ReleaseDLL;..\JCCL\ReleaseDLL;..\Gadgeteer\ReleaseDLL;..\Sonix\ReleaseDLL"
 				GenerateDebugInformation="FALSE"
-				SubSystem="2"
+				SubSystem="1"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
 				ImportLibrary="$(OutDir)/vrj.lib"
